--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Thoughts-on-the-Present-Discontents-and-Speeches_2173
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Burke, Edmund
@@ -16,6 +19,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1355
     wikipedia: http://en.wikipedia.org/wiki/Henry_Morley
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2173#Thoughts-on-the-Present-Discontents-and-Speeches
 gutenberg_issued: '2000-05-01'
 gutenberg_type: Text
 identifiers:
